<resources>
    <string name="app_name">Sample Test Raman</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="add">Add</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="pincode">Pincode</string>
    <string name="enter_information">Enter Information</string>
    <string name="save">Save</string>
    <string name="please_enter_first_name">Please Enter First Name</string>
    <string name="please_enter_last_name">Please Enter Last Name</string>
    <string name="please_enter_city">Please Enter City</string>
    <string name="please_enter_mobile">Please Enter Mobile</string>
    <string name="please_enter_valid_mobile">Please Enter Valid Mobile</string>
    <string name="please_enter_state">Please Enter State</string>
    <string name="please_enter_Pincode">Please Enter Pincode</string>
</resources>
