<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".PersonInfoActivity">

    <TextView
        android:id="@+id/firstName"
        android:layout_width="@dimen/width_text_view"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:inputType="textCapSentences"
        android:selectAllOnFocus="true"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintEnd_toStartOf="@id/lastName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lastName"
        android:layout_width="@dimen/width_text_view"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:inputType="textCapSentences"
        android:selectAllOnFocus="true"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintEnd_toStartOf="@+id/phone"
        app:layout_constraintStart_toEndOf="@id/firstName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="@dimen/width_text_view"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:maxLength="10"
        android:selectAllOnFocus="true"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintEnd_toStartOf="@+id/city"
        app:layout_constraintStart_toEndOf="@id/lastName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/city"
        android:layout_width="@dimen/width_text_view"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        android:inputType="textCapSentences"
        android:selectAllOnFocus="true"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintEnd_toStartOf="@+id/state"
        app:layout_constraintStart_toEndOf="@id/phone"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/state"
        android:layout_width="@dimen/width_text_view"
        android:layout_height="wrap_content"
        android:hint="@string/state"
        android:inputType="textCapSentences"
        android:selectAllOnFocus="true"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintEnd_toStartOf="@+id/pincode"
        app:layout_constraintStart_toEndOf="@id/city"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pincode"
        android:layout_width="@dimen/width_text_view"
        android:layout_height="wrap_content"
        android:hint="@string/pincode"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintEnd_toEndOf="@id/imgEdit"
        app:layout_constraintStart_toEndOf="@id/state"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_edit_black_24dp"
        app:layout_constraintStart_toEndOf="@id/pincode"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>